# GN_Utilities

./: .gitignore  LICENSE  Makefile.am  configure.ac
MSVS/: GN_Utilities.sln  GN_Utilities.vcxproj  GN_Utilities.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h  stdheaders.h
include/: BinFile.h  BufferedInsert.h  BufferedReader.h  CmdTCPConnection.h  CommandHandler.h  ConfigFile.h  DBase.h  DurationTracker.h  EMat.h  GNUtilities.h  GeoUtilDefines.h  GeoUtilDefines.h.in  GeoUtilities.h  Image.h  KeywordMgr.h  LinuxUDPServer.h  MySQLDBase.h  OutStream.h  SSHClient.h  SSHServer.h  StdOutStream.h  TCPConnection.h  TCPServer.h  TarFile.h  TarReader.h  UDPClient.h  UDPServer.h  WinUDPClient.h  WinUDPServer.h  miscutils.h
m4/: ax_boost_base.m4
src/: BinFile.cpp  BufferedInsert.cpp  BufferedReader.cpp  CmdTCPConnection.cpp  CommandHandler.cpp  ConfigFile.cpp  DBase.cpp  Dictionary.cpp  DurationTracker.cpp  EMat.cpp  Image.cpp  KeywordMgr.cpp  LinuxUDPServer.cpp  Makefile.am  MySQLDBase.cpp  OutStream.cpp  SSHClient.cpp  SSHServer.cpp  StdOutStream.cpp  TCPConnection.cpp  TCPServer.cpp  TarFile.cpp  TarReader.cpp  UDPClient.cpp  UDPServer.cpp  WinUDPClient.cpp  WinUDPServer.cpp  WordNet.cpp  miscutils.cpp  opencv_utils.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
