lib_LIBRARIES = libGenUtilities.a
libGenUtilities_a_SOURCES = BinFile.cpp BufferedInsert.cpp BufferedReader.cpp CmdTCPConnection.cpp CommandHandler.cpp ConfigFile.cpp DBase.cpp Dictionary.cpp DurationTracker.cpp EMat.cpp Image.cpp KeywordMgr.cpp LinuxUDPServer.cpp miscutils.cpp MySQLDBase.cpp opencv_utils.cpp OutStream.cpp SSHClient.cpp SSHServer.cpp StdOutStream.cpp TarFile.cpp TarReader.cpp TCPConnection.cpp TCPServer.cpp tinystr.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp UDPClient.cpp UDPServer.cpp WinUDPClient.cpp WinUDPServer.cpp WordNet.cpp

